# dxvk-remix

./: .gitignore  update_sln.ps1
src/d3d9/: d3d9_device.cpp  d3d9_main.cpp  meson.build
src/d3d9/d3dx9/: d3dx9.h  d3dx9_core.h  d3dx9_effect.h  d3dx9_math.h  d3dx9_math.inl  d3dx9_shader.h  d3dx9_tex.h  d3dx9_util.cpp  d3dx9_util.h
src/d3d9/mge/: api.cpp  configuration.cpp  distantinit.cpp  distantland.cpp  distantland.h  dlformat.h  dlmath.h  ffeshader.cpp  ffeshader.h  hooking_common.h  macrofunctions.cpp  mmefunctiondefs.h  morrowindbsa.cpp  mwbridge.cpp  mwbridge.h  quadtree.cpp  quadtree.h  renderdepth.cpp  renderexterior.cpp  rendergrass.cpp  rendershadow.cpp  renderwater.cpp  specificrender.h  statusoverlay.cpp  userhud.cpp
src/d3d9/mwse/: funcentity.cpp  funcinput.cpp  funcphysics.cpp  funcshader.cpp  funcweather.cpp  mwseinstruction.cpp
src/d3d9/support/: log.cpp  rgbvector.h  rgbvector.inl  winheader.h
